--- a/src/pages/StatsPage/components/StatsHeader/StatsHeader.module.css
+++ b/src/pages/StatsPage/components/StatsHeader/StatsHeader.module.css
@@ -45,22 +45,25 @@
 }
 
 .headlineStats {
+  margin: 2rem;
   margin-top: -75px;
+  margin-bottom: 50px;
   display: flex;
   gap: 180px;
-  margin-bottom: 50px;
 }
 
-.weightTarget, .weightChange {
-  width: 50%;
+.headlineStats > div {
+  flex: 1;
+  display: flex;
+  row-gap: 0.5rem;
 }
 
 .weightTarget {
-  text-align: right;
+  justify-content: flex-end;
 }
 
 .weightChange {
-  text-align: left;
+  justify-content: flex-start;
 }
 
 .weightChangeIcon {
@@ -74,4 +77,23 @@
   margin-right: 1rem;
   padding-right: 1rem;
   border-right: 1px solid #CCC;
+}
+
+@media (max-width: 600px) {
+  .headlineStats {
+    margin-top: -20px;
+    margin-bottom: 20px;
+    gap: 0;
+  }
+
+  .headlineStats > div {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .headlineStats .label {
+    border-right: none;
+    margin-right: 0;
+    padding-right: 0;
+  }
 }
